--- a/scss/blocks/_choose-class.scss
+++ b/scss/blocks/_choose-class.scss
@@ -1,22 +1,3 @@
-@import './fonts';
-@import './variables';
-
-
-body {
-  font-family: $ff-text;
-  font-size: $fs-base;
-}
-
-.wrapper {
-  width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
-  max-width: 2208px;
-  margin: 0 auto;
-  background-color: #e3e3e3;
-  height: 100vh;
-}
-
 table,
 td,
 th {
@@ -43,6 +24,7 @@ h6 {
 .c-schedule {
   width: 100%;
   max-width: 1360px;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -76,6 +58,8 @@ h6 {
 }
 
 .content {
+  padding-bottom: 200px;
+  position: relative;
   width: 100%;
   max-width: 1360px;
   margin: 0 auto;
@@ -89,6 +73,7 @@ h6 {
   }
 
   &__table {
+    position: absolute;
     width: 100%;
     color: $c-table;
     background-color: #fff;
